# python-audiobook-tools

./: .gitignore  .noseids  Makefile  README.md  Usefull Links.txt  audiobook_tools.code-workspace  nosetests.xml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
audiobook/: core.py  helpers.py
audiobook_tools/: __init__.py  __main__.py  audible.py  core.py  helpers.py
test/: test_helpers.py
test/fixtures/: audible.m4b  author - title.m4b
tests/: test_advanced.py  test_helpers.py
tests/fixtures/: overdrive.m4b
