[metadata]
name = audiobook-tools
version = 0.1.0
description = Python toolbox to process audiobooks
long_description = file: README.rst
author = Diego Alifano, Federico Castagnini
author_email = federico.castagnini@gmail.com
url = https://github.com/facastagnini/python-audiobook-tools
license = file: LICENSE

[options]
packages = find:
python_requires = ~=3.6

[options.packages.find]
exclude =
    tests
    docs

[bdist_wheel]
universal = 1

[flake8]
disable-noqa = True
max-line-length = 88
extend-ignore =
   E203,  # whitespace before : is not PEP8 compliant (& conflicts with black)
